--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "goit-react-hw-06-phonebook",
+  "name": "goit-react-hw-07-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yovsyannikov.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://yovsyannikov.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "animate-presence": "^0.2.1",
+    "axios": "^1.1.3",
     "cleave.js": "^1.6.0",
+    "component-loader": "^0.1.1",
     "css-modules": "^0.3.0",
+    "framer-motion": "^7.6.7",
     "modern-normalize": "^1.1.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
